--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ db.sqlite3
 
 # Diretório media
 media/
+
+# Byte-compiled / optimized / DLL files
+# Ver: https://github.com/github/gitignore/blob/master/Python.gitignore
+__pycache__/
+*.py[cod]
+*$py.class
